@@ -1,3 +1,9 @@
+2007-12-18 Denis Ovsienko
+
+	* bgp_routemap.c: (no_set_aspath_prepend) This command cancelled
+	  existing "set" command regardless if "no set" matched it or not.
+	  Fixed.
+
 2007-11-13 Paul Jakma <paul.jakma@sun.com>
 
 	* bgp_main.c: Small fix, format string parameters should never
